--- a/index.html
+++ b/index.html
@@ -20,3 +20,6 @@
 
 <h2>Emisiones con Datawrapper. Gráfico de Dispersión</h2>
 <iframe title="Emisiones C02" aria-label="chart" id="datawrapper-chart-zDVYh" src="https://datawrapper.dwcdn.net/zDVYh/3/" scrolling="no" frameborder="0" style="border: none;" width="864" height="597"></iframe>
+
+<h2>Emisiones con Datawrapper. Gráfico de Barras del Top</h2>
+<iframe title="Top 25 Países en Emisiones de C02 en 2018" aria-label="Bar Chart" id="datawrapper-chart-I3h5t" src="https://datawrapper.dwcdn.net/I3h5t/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="740"></iframe>
