--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
- <h1>Visualización – AG1 </h1>
+
  Nombre: Luis Marín Hinestrosa<br>
  Url: <a 
- href="https://js-ypppz7.stackblitz.io">Visualización – AG1</a>
+ href="https://js-ypppz7.stackblitz.io">Visualización</a>
 
+ <h1>Visualización – AG1 </h1>
  <h2>Emisiones Gráfico Circular </h2>
 <iframe width="724" height="428.158591954023" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRj7Kx9w0i8vnLd_ywQTqdeUAybABqhRBVoE5qGBNnQubC6kG-E0gxE-Sr6EgC4_AQM8AIvO_0lvcIO/pubchart?oid=262306363&amp;format=interactive"></iframe>
 
@@ -23,3 +24,7 @@
 
 <h2>Emisiones con Datawrapper. Gráfico de Barras del Top 25</h2>
 <iframe title="Top 25 Países en Emisiones de C02 en 2018" aria-label="Bar Chart" id="datawrapper-chart-I3h5t" src="https://datawrapper.dwcdn.net/I3h5t/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="740"></iframe>
+
+<h1>Visualización – AG2 </h1>
+
+<a href="https://ibb.co/Psyprqx"><img src="https://i.ibb.co/tw6fHVB/Dashboard-AG2.png" alt="Dashboard-AG2" border="0"></a>
