AG2 - Gráfico de Burbujas

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
 <iframe title="Top 25 Países en Emisiones de C02 en 2018" aria-label="Bar Chart" id="datawrapper-chart-I3h5t" src="https://datawrapper.dwcdn.net/I3h5t/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="740"></iframe>
 
 <h1>Visualización – AG2 </h1>
-
+<h2>Dashboard Principal </h2>
 <a href="https://ibb.co/Psyprqx"><img src="https://i.ibb.co/tw6fHVB/Dashboard-AG2.png" alt="Dashboard-AG2" border="0"></a>
+
+<h2>Gráfico de Burbujas </h2>
+<a href="https://ibb.co/YRWYSKk"><img src="https://i.ibb.co/xCsPbcj/Dashboard-AG2-2.png" alt="Dashboard-AG2-2" border="0"></a>
