--- a/index.html
+++ b/index.html
@@ -31,3 +31,8 @@
 
 <h2>Gráfico de Burbujas </h2>
 <a href="https://ibb.co/YRWYSKk"><img src="https://i.ibb.co/xCsPbcj/Dashboard-AG2-2.png" alt="Dashboard-AG2-2" border="0"></a>
+
+<h1>Visualización – AG3 </h1>
+<h2>Google Colaboratory </h2>
+Link: <a 
+ href="https://colab.research.google.com/drive/1NzhSdDPbpSuBTXZBOP9UwNa1jJ_a7bMV?usp=sharing">Google Colaboratory - AG3</a>
