--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<head>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></script>
+</head>
 
  Nombre: Luis Marín Hinestrosa<br>
  Url: <a 
@@ -36,3 +41,15 @@
 <h2>Google Colaboratory </h2>
 Link: <a 
  href="https://colab.research.google.com/drive/1NzhSdDPbpSuBTXZBOP9UwNa1jJ_a7bMV?usp=sharing">Google Colaboratory - AG3</a>
+
+<h2>Gráfico de Columnas con D3Plus</h2>
+<div id="viz1"></div>
+
+<!-- COMENTARIO -->
+<!-- Reutilizar codigo desde http://jsfiddle.net/skfdk1ao/13/ -->
+
+<h2> Reutilizar código. Barras</h2>
+<div id="viz2"></div>
+
+<h2>Gráfico de Caja y Bigotes</h2>
+<div id="viz3"></div>
